--- a/app/views/rsvp_mailer/invite_email.txt.erb
+++ b/app/views/rsvp_mailer/invite_email.txt.erb
@@ -1,4 +1,5 @@
 Dear <%= @person.first_name %>,
+We just wanted to remind you to RSVP for our wedding on our website. Here's the original email.
 Beatrice & Justice are getting married September 15th, 2018. Please join us!
 
 Friends Camp, South China, ME
